<resources>
    <string name="app_name">NoteIt</string>
    <string name="pin_notes_title">\u25CF Pin notes</string>
    <string name="notes_title">\u25CF Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here</string>
    <string name="modal_title">Options</string>
    <string name="pick_color">Pick color</string>
    <string name="add_media">Add media</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="permanently_delete_note">Permanently delete note</string>
    <string name="undo_note">Undo note</string>
    <string name="share_to">Share to</string>
    <string name="add_audio">Add audio</string>
    <string name="confirm">Confirm</string>
    <string name="enter_password">Enter password</string>

</resources>