<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cl_note_password_container"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/iv_note_password"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_search_icon" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/enter_password"
        android:textColor="@color/color_search_icon"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/iv_note_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_note_password"
        app:layout_constraintTop_toTopOf="@id/iv_note_password" />

    <EditText
        android:id="@+id/et_note_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_8sdp"
        android:hint="@string/enter_password"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/iv_note_password" />

    <TextView
        android:id="@+id/tv_note_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textColor="@color/color_green"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_note_password" />

    <TextView
        android:id="@+id/tv_cancel_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel_dialog"
        android:textColor="@color/color_delete"
        android:textSize="@dimen/_13ssp"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_note_pass"
        app:layout_constraintTop_toBottomOf="@id/et_note_password" />

</androidx.constraintlayout.widget.ConstraintLayout>