<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_modal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background_modal"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/tv_modal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/modal_title"
        android:textColor="@color/color_search_icon"
        android:textSize="@dimen/_13ssp" />


    <LinearLayout
        android:id="@+id/ll_add_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/color_search_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/add_media"
            android:textColor="@color/color_search_icon"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_audio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_audio"
            app:tint="@color/color_search_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/add_audio"
            android:textColor="@color/color_search_icon"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_alarm"
            app:tint="@color/color_search_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="Set alarm"
            android:textColor="@color/color_search_icon"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_note_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_lock"
            app:tint="@color/color_search_icon" />

        <EditText
            android:id="@+id/note_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:textColorHint="@color/color_search_icon"
            android:textColor="@color/color_search_icon"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_share"
            app:tint="@color/color_search_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/share_to"
            android:textColor="@color/color_search_icon"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delete_note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/color_delete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/color_delete"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

</LinearLayout>