<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Note.MainActivity"
    android:background="@color/color_primary"
    >

    <TextView
        android:id="@+id/tv_my_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        />

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_my_notes"
        >

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/color_search_icon"
            />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_text_hint"
            android:textSize="@dimen/_13ssp"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/ll_quick_actions"
        app:layout_constraintTop_toBottomOf="@id/ll_search"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/ll_quick_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_quick_actions_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/iv_change_layout"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_list"
            app:tint="@color/color_icons"
            />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logout"
            app:tint="@color/color_icons"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_add_new_note"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@id/ll_quick_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ll_quick_actions"
        app:tint="@color/color_primary"
        />

</androidx.constraintlayout.widget.ConstraintLayout>